# ENSTAB

./: .env.example  .gitignore  ACTORS.md  BACKEND_AI_ARCHITECTURE.md  FRONTEND_PLAN.md  PLAN-HACK4UCAR.md  README.md  api-contract.md  docker-compose.yml  pyproject.toml  run_migration.py
advice-serveur/: .env.example  .gitignore  Competitor scraper.py  Orchastrator.py  Ranking agent.py  Ranking downloader.py  Ranking mcp server.py  Readme.md  data_schema.sql  data_schema.txt  docker-compose.searxng.yml  orchestrator.py  requirements.txt
advice-serveur/agent/: improvement_engine.py  ranking_agent.py
advice-serveur/mcp_server/: ranking_mcp_server.py
advice-serveur/scraper/: competitor_scraper.py  ranking_downloader.py
advice-serveur/tests/: test_performance_improvements.py
backend/: .dockerignore  Dockerfile  config.py  docker-compose.yml  main.py  requirements.txt  seed.py
backend/ai/: engine.py
backend/api/: deps.py
backend/auth/: jwt_utils.py  password.py  rbac.py  two_factor.py
backend/db/: __init__.py  supabase.py
backend/ingestion/: __init__.py  config.py  main.py
backend/services/: institution_service.py
frontend/: .dockerignore  Dockerfile  docker-compose.yml  package-lock.json  package.json
ingestion/models/: schemas.py
ingestion/pipeline/: chunker.py  events.py
ingestion/services/: __init__.py  supabase_client.py  unstructured_client.py
supabase/: config.toml
supabase/migrations/: 20250425000001_ingestion_tables.sql  20250426000001_complete_schema.sql  20250426000002_ucar_complete.sql
tests/: test_pipeline.py
(+232 files in other folders)
